plugins {
    id 'com.android.application'
}

android {
    compileSdk 34
    namespace "com.jwoglom.pumpx2.example"

    defaultConfig {
        applicationId "com.jwoglom.pumpx2.example"
        minSdk 26
        targetSdk 34
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_14
        targetCompatibility JavaVersion.VERSION_14
    }
    buildFeatures {
        viewBinding true
    }
}

dependencies {

    implementation project(':androidLib')
    implementation project(':messages')
    implementation project(':shared')

    implementation 'androidx.appcompat:appcompat:1.7.0'
    implementation 'com.google.android.material:material:1.12.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
    implementation 'androidx.navigation:navigation-fragment:2.8.7'
    implementation 'androidx.navigation:navigation-ui:2.8.7'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'

    implementation 'com.github.weliem:blessed-android:2.4.0'
    implementation 'com.jakewharton.timber:timber:5.0.1'
    implementation "me.champeau.openbeans:openbeans:1.0.2"
    implementation "commons-codec:commons-codec:1.18.0"
    implementation "org.apache.commons:commons-lang3:3.17.0"
    implementation "com.google.guava:guava:33.3.1-android"
}